Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -166,7 +166,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyONn2x9shcCN0UJ6WipNHVS",
+      "authorship_tag": "ABX9TyPdJhGpV10gN/vs+V7pPv3f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8405,72 +8405,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YDpDNJ_gP29P",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a82850f1-5563-4351-a435-4aec55a85c78"
+        "id": "YDpDNJ_gP29P"
       },
       "source": [
-        "### https://codekodo.tistory.com/57\n",
+        "### https://8iggy.tistory.com/156\n",
         "import sys\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def dijkstra(start):\n",
-        "    global m, n, s\n",
-        "\n",
+        "def dijkstra(start,n,m,s):\n",
         "    dp = [[int(1e9)] * (m+1) for _ in range(n+1)]\n",
         "    dp[start][0] = 0\n",
         "\n",
         "    for j in range(m+1):\n",
-        "        for i in range(1, n+1):\n",
+        "        for i in range(1,n+1):\n",
         "            if dp[i][j] == int(1e9):\n",
         "                continue\n",
         "            \n",
-        "            dist = dp[i][j]\n",
-        "            for position, cost, time in s[i]:\n",
-        "                if j + cost > m:\n",
+        "            time = dp[i][j]\n",
+        "            \n",
+        "            for tiket_position, tiket_cost, tiket_time in s[i]:\n",
+        "                if tiket_cost + j > m:\n",
         "                    continue\n",
         "                \n",
-        "                dp[position][j + cost] = min(dp[position][j + cost], dist + time)\n",
+        "                dp[tiket_position][tiket_cost + j] = min(dp[tiket_position][tiket_cost + j], time + tiket_time)\n",
         "\n",
         "    return dp\n",
         "\n",
-        "for _ in range(int(input())):\n",
-        "    n, m, k = map(int, input().split())\n",
+        "def main():\n",
+        "    for _ in range(int(input())):\n",
+        "        n, m, k = map(int, input().split())\n",
         "\n",
-        "    s = [[] for _ in range(n+1)]\n",
-        "    for _ in range(k):\n",
-        "        u, v, c, d = map(int, input().split())\n",
-        "        s[u].append([v,c,d])\n",
-        "    \n",
-        "    res = dijkstra(1)\n",
-        "    if min(res[n]) == int(1e9):\n",
-        "        print('Poor KCM')\n",
-        "    else:\n",
-        "        print(min(res[n]))"
+        "        s = [[] for _ in range(n+1)]\n",
+        "        for _ in range(k):\n",
+        "            u, v, c, d = map(int, input().split())\n",
+        "            s[u].append([v,c,d])\n",
+        "        \n",
+        "        res = dijkstra(1,n,m,s)\n",
+        "        if min(res[n]) == int(1e9):\n",
+        "            print('Poor KCM')\n",
+        "        else:\n",
+        "            print(min(res[n]))\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n",
-            "3 100 3\n",
-            "1 2 1 1\n",
-            "2 3 1 1\n",
-            "1 3 3 30\n",
-            "2\n",
-            "4 10 4\n",
-            "1 2 5 3\n",
-            "2 3 5 4\n",
-            "3 4 1 5\n",
-            "1 3 10 6\n",
-            "Poor KCM\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8478,19 +8458,83 @@
         "id": "Sq0gmSQ_P4Py"
       },
       "source": [
-        "#### "
+        "####  1956번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T-dhCwq5P4Py"
+        "id": "T-dhCwq5P4Py",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6796bf85-f34f-47f8-aeb4-ff419048744a"
       },
       "source": [
-        ""
+        "# pypy3로는 정답\n",
+        "# python으로 진행할 경우 heapq사용\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    global v, dp\n",
+        "    v, e = map(int, input().split())\n",
+        "\n",
+        "    dp = [[int(1e9)] * v for _ in range(v)]\n",
+        "    for i in range(max(v,e)):\n",
+        "        if i < v:\n",
+        "            dp[i][i] = 0\n",
+        "\n",
+        "        if i < e:\n",
+        "            a, b, c = map(int, input().split())\n",
+        "            dp[a-1][b-1] = c\n",
+        "    \n",
+        "    for k in range(v):\n",
+        "        for i in range(v):\n",
+        "            for j in range(v):\n",
+        "                dp[i][j] = min(dp[i][j], dp[i][k] + dp[k][j])\n",
+        "\n",
+        "    min_value = int(1e9)\n",
+        "    for i in range(v):\n",
+        "        for j in range(v):\n",
+        "            if i == j:\n",
+        "                continue\n",
+        "            \n",
+        "            min_value = min(min_value, dp[i][j] + dp[j][i])\n",
+        "    \n",
+        "    if min_value == int(1e9):\n",
+        "        print(-1)\n",
+        "    else:\n",
+        "        print(min_value)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()\n",
+        "\n",
+        "while heap:\n",
+        "    d, s, g = hq.heappop(heap)\n",
+        "    #heap을 쓰면 d가 가장 작은 순으로 정렬되기 때문에\n",
+        "    #s == g인 경우 출발지에서 출발해 다시 출발지로 돌아온 경우 = 사이클\n",
+        "    #사이클을 돈 가장 최소 비용이 d\n",
+        "    #이 부분에서 시간을 많이 단축할 수 있음\n",
+        "    if s == g:\n",
+        "        print(d)\n",
+        "        break"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 4\n",
+            "1 2 1\n",
+            "3 2 1\n",
+            "1 3 5\n",
+            "2 3 2\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
