Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -166,7 +166,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyPdJhGpV10gN/vs+V7pPv3f",
+      "authorship_tag": "ABX9TyOHwEhS+XVHddqQoqSnjL7I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8464,11 +8464,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T-dhCwq5P4Py",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6796bf85-f34f-47f8-aeb4-ff419048744a"
+        "id": "T-dhCwq5P4Py"
       },
       "source": [
         "# pypy3로는 정답\n",
@@ -8520,21 +8516,8 @@
         "        print(d)\n",
         "        break"
       ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3 4\n",
-            "1 2 1\n",
-            "3 2 1\n",
-            "1 3 5\n",
-            "2 3 2\n",
-            "3\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8551,17 +8534,78 @@
         "id": "Om29NmS_Px00"
       },
       "source": [
-        "#### "
+        "####  3273번\n"
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "\n",
+        "def main():\n",
+        "    n = int(input())\n",
+        "    s = list(map(int, input().split()))\n",
+        "    s.sort()\n",
+        "    x = int(input())\n",
+        "\n",
+        "    t, sum = 0, 0\n",
+        "    start, end = 0, 0\n",
+        "    for start in range(n):\n",
+        "\n",
+        "        while sum < x and end < x: # 부분합이 x보다 작다면 end 1증가\n",
+        "            sum += s[end]\n",
+        "            end += 1\n",
+        "        \n",
+        "        # start와 end사이의 부분합이 x보다 크거나 같고\n",
+        "        if sum == x: # 부분합이 같으면\n",
+        "            t += 1   # t증가\n",
+        "        \n",
+        "        sum -= s[start] # 부분합이 크면 start를 당겨서 부분합을 내림\n",
+        "        # 와 이런거 누가 구했냐;\n",
+        "\n",
+        "\n",
+        "    print(t)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
       "metadata": {
-        "id": "oZSM6np0Px01"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uCYpD1kMbN53",
+        "outputId": "f7b5b5f6-0715-4178-dc84-3b3903058a97"
       },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "5 12 7 10 9 1 2 3 11\n",
+            "13\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KDSRC4MabQqC"
+      },
+      "source": [
+        "#### \n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
       ],
+      "metadata": {
+        "id": "IpR9WjDrbQqC"
+      },
       "execution_count": null,
       "outputs": []
     },
