Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -166,7 +166,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOHwEhS+XVHddqQoqSnjL7I",
+      "authorship_tag": "ABX9TyPfQXRZ5hUgZlaPHx+HSS06",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,6 +360,51 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####  10926번"
+      ],
+      "metadata": {
+        "id": "RJEPK4fAmy0g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "    t = input()\n",
+        "    print(t + '??!')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "fAKNCv6am0MP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### "
+      ],
+      "metadata": {
+        "id": "OO5wyMwim069"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "D918BX5Wm069"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8540,28 +8585,24 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "def main():\n",
         "    n = int(input())\n",
         "    s = list(map(int, input().split()))\n",
-        "    s.sort()\n",
         "    x = int(input())\n",
+        "    s.sort()   \n",
         "\n",
-        "    t, sum = 0, 0\n",
-        "    start, end = 0, 0\n",
-        "    for start in range(n):\n",
+        "    t = 0\n",
+        "    start, end = 0, n-1\n",
+        "    while start < end: # i < j\n",
+        "        sum = s[start] + s[end] # 부분합이 x보다 작다면 end 1증가\n",
         "\n",
-        "        while sum < x and end < x: # 부분합이 x보다 작다면 end 1증가\n",
-        "            sum += s[end]\n",
-        "            end += 1\n",
-        "        \n",
-        "        # start와 end사이의 부분합이 x보다 크거나 같고\n",
-        "        if sum == x: # 부분합이 같으면\n",
-        "            t += 1   # t증가\n",
-        "        \n",
-        "        sum -= s[start] # 부분합이 크면 start를 당겨서 부분합을 내림\n",
-        "        # 와 이런거 누가 구했냐;\n",
-        "\n",
+        "        if sum == x: \n",
+        "            t += 1\n",
+        "            start += 1\n",
+        "        elif sum < x:\n",
+        "            start += 1\n",
+        "        else:\n",
+        "            end -= 1\n",
         "\n",
         "    print(t)\n",
         "\n",
@@ -8573,18 +8614,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uCYpD1kMbN53",
-        "outputId": "f7b5b5f6-0715-4178-dc84-3b3903058a97"
+        "outputId": "12f57065-b287-41ee-9772-8c4b00ca6fa6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "9\n",
-            "5 12 7 10 9 1 2 3 11\n",
-            "13\n",
-            "3\n"
+            "2\n",
+            "1 2\n",
+            "2\n",
+            "1\n"
           ]
         }
       ]
@@ -8601,7 +8642,33 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def main():\n",
+        "    n = int(input())\n",
+        "    s = list(map(int, input().split()))\n",
+        "    x = int(input())\n",
+        "    #s.sort()   \n",
+        "\n",
+        "    t, sum = 0, 0\n",
+        "    start, end = 0, 0\n",
+        "    \n",
+        "    for start in range(n): # i < j\n",
+        "\n",
+        "        while sum < x and : # 부분합이 x보다 작다면 end 1증가\n",
+        "            sum += s[end]\n",
+        "            end += 1\n",
+        "        \n",
+        "        # start와 end사이의 부분합이 x보다 크거나 같고\n",
+        "        if sum == x: # 부분합이 같으면\n",
+        "            t += 1   # t증가\n",
+        "        \n",
+        "        sum -= s[start] # 부분합이 크면 start를 당겨서 부분합을 내림\n",
+        "        # 와 이런거 누가 구했냐;\n",
+        "\n",
+        "\n",
+        "    print(t)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
         "id": "IpR9WjDrbQqC"
