Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -6,7 +6,6 @@
       "name": "[BOJ]백준 단계별 문제풀이.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "POAYGCfMe_0s",
         "SwNOozo2J2Qk",
         "4KG0dQ5_J5k_",
         "MFvDSJ8eJ5oh",
@@ -166,7 +165,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyPfQXRZ5hUgZlaPHx+HSS06",
+      "authorship_tag": "ABX9TyMXx5NVuGXJy7sJMN/+jVWE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -389,7 +388,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### "
+        "####  18108번"
       ],
       "metadata": {
         "id": "OO5wyMwim069"
@@ -398,7 +397,13 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "def main():\n",
+        "    t = int(sys.stdin.readline())\n",
+        "    print(t - 543)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
         "id": "D918BX5Wm069"
@@ -8610,25 +8615,10 @@
         "    main()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uCYpD1kMbN53",
-        "outputId": "12f57065-b287-41ee-9772-8c4b00ca6fa6"
+        "id": "uCYpD1kMbN53"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n",
-            "1 2\n",
-            "2\n",
-            "1\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8636,7 +8626,7 @@
         "id": "KDSRC4MabQqC"
       },
       "source": [
-        "#### \n"
+        "####  (*****)2470번\n"
       ]
     },
     {
@@ -8645,27 +8635,29 @@
         "def main():\n",
         "    n = int(input())\n",
         "    s = list(map(int, input().split()))\n",
-        "    x = int(input())\n",
-        "    #s.sort()   \n",
+        "    s.sort()\n",
         "\n",
-        "    t, sum = 0, 0\n",
-        "    start, end = 0, 0\n",
+        "    start, end = 0, n-1\n",
         "    \n",
-        "    for start in range(n): # i < j\n",
+        "    res = [abs(s[start] + s[end]), s[start], s[end]]\n",
         "\n",
-        "        while sum < x and : # 부분합이 x보다 작다면 end 1증가\n",
-        "            sum += s[end]\n",
-        "            end += 1\n",
-        "        \n",
-        "        # start와 end사이의 부분합이 x보다 크거나 같고\n",
-        "        if sum == x: # 부분합이 같으면\n",
-        "            t += 1   # t증가\n",
-        "        \n",
-        "        sum -= s[start] # 부분합이 크면 start를 당겨서 부분합을 내림\n",
-        "        # 와 이런거 누가 구했냐;\n",
+        "    while start < end:\n",
         "\n",
+        "        sum = s[start] + s[end]\n",
         "\n",
-        "    print(t)\n",
+        "        if abs(sum) < res[0]:\n",
+        "            res = [abs(sum), s[start], s[end]]\n",
+        "            if res[0] == 0:\n",
+        "                break\n",
+        "\n",
+        "        if sum > 0:\n",
+        "            end -= 1\n",
+        "        else:\n",
+        "            start += 1\n",
+        "\n",
+        "    res = res[1:]\n",
+        "    res.sort()\n",
+        "    print(*res)\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -8697,13 +8689,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uIzAR78kPyO7"
+        "id": "uIzAR78kPyO7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "476d365c-87f2-4738-d44a-25702859e5da"
       },
       "source": [
-        ""
+        "t = [-11, 3, -31,0,1,-1]\n",
+        "t.sort()\n",
+        "t"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-31, -11, -1, 0, 1, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
