--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -165,7 +165,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMXx5NVuGXJy7sJMN/+jVWE",
+      "authorship_tag": "ABX9TyNZxNrYsDj02aDt6LDDyn5y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8671,6 +8671,125 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Lsin9ORD9J1c"
+      },
+      "source": [
+        "####  1806번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wH8AxcPr9J1i",
+        "outputId": "4c87ac30-f867-4837-ff1c-9e69ea7f8890"
+      },
+      "source": [
+        "def main():\n",
+        "    n, s = map(int, input().split())\n",
+        "    m = list(map(int, input().split()))\n",
+        "\n",
+        "    start, end = 0, 0\n",
+        "    sum = 0\n",
+        "    min_length = int(1e9)\n",
+        "    for _ in range(n):\n",
+        "        while sum < s and end < n:\n",
+        "            sum += m[end]\n",
+        "            end += 1\n",
+        "        \n",
+        "        if sum >= s and (end - start) < min_length: # s이상이 되는 것\n",
+        "            min_length = (end - start)\n",
+        "        \n",
+        "        sum -= m[start]\n",
+        "        start += 1\n",
+        "    \n",
+        "    if min_length < int(1e9):\n",
+        "        print(min_length)\n",
+        "    else:\n",
+        "        print(0)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()\n",
+        "\n"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 10\n",
+            "3 3 3 3 3 3 3 3 3 3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UcMogZFC9J4-"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "deM_c1kF9J4_"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E_uPvDec9J79"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f-mrdWza9J8C"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7Jk6q-Z49J_J"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "esuh9VBc9J_K"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "eWsnwFm3PyO6"
       },
       "source": [
@@ -8689,30 +8808,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uIzAR78kPyO7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "476d365c-87f2-4738-d44a-25702859e5da"
+        "id": "uIzAR78kPyO7"
       },
       "source": [
-        "t = [-11, 3, -31,0,1,-1]\n",
-        "t.sort()\n",
-        "t"
+        ""
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[-31, -11, -1, 0, 1, 3]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
