Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -32,12 +32,8 @@
         "ZZX1EwaLOoXw",
         "uwtGS2Q4Ooaz",
         "L2bGuKUUOoeb",
-        "wBFPqXNuR8ne",
-        "JjxDErpjR8ne",
         "AZNtoqizpQ2e",
         "u-5xqnR1pRSf",
-        "mKjNyy4epRXc",
-        "bTQh46KspRbf",
         "gZGgBEu5pRfc",
         "6twKfAmqpRnI",
         "ZDuE1-OipRq_",
@@ -49,7 +45,10 @@
         "Rq10se6eIfZD",
         "4_uTqdNmIjzA",
         "_bKHA0lrIj6l",
-        "UaFH5L6zTDVu",
+        "zu0qQkqvTDVz",
+        "L3mEbN4iMdEM",
+        "fGK6XiQ4MdHJ",
+        "3LicNHImMdKU",
         "NTQ_ay5yTJtQ",
         "Rv4kaoPHTJtR",
         "_GihlXpZv_jE",
@@ -89,7 +88,6 @@
         "Hc6V32u4pVUa",
         "pNoCqLvepVX5",
         "PPg8gdeSpVbw",
-        "meZqnuly1Ns1",
         "xKIhI97D1Ns-",
         "JLA5o1_kG4_y",
         "CO66sh-WEVOS",
@@ -165,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNZxNrYsDj02aDt6LDDyn5y",
+      "authorship_tag": "ABX9TyMpN9181+opZaWh64vf+Itu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8714,7 +8712,7 @@
         "    main()\n",
         "\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8733,19 +8731,64 @@
         "id": "UcMogZFC9J4-"
       },
       "source": [
-        "#### "
+        "#### 1644번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "deM_c1kF9J4_"
+        "id": "deM_c1kF9J4_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "575b4df2-4bdb-4f4b-8aeb-51b614ea0a6b"
       },
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    t = int(input())\n",
+        "    n = [True for _ in range(t + 1)]\n",
+        "    res = []\n",
+        "    for i in range(2, t+1):\n",
+        "        if n[i]:\n",
+        "            res.append(i)\n",
+        "            for j in range(i*2, t+1, i):\n",
+        "                n[j] = False\n",
+        "\n",
+        "\n",
+        "    start, end = 0, 0\n",
+        "    sum = 0\n",
+        "    result_value = 0\n",
+        "    for _ in range(len(res)):\n",
+        "        while sum < t and end < len(res):\n",
+        "            sum += res[end]\n",
+        "            end += 1\n",
+        "        \n",
+        "        if sum == t:\n",
+        "            result_value += 1\n",
+        "        \n",
+        "        sum -= res[start]\n",
+        "        start += 1\n",
+        "    \n",
+        "    print(result_value)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "53\n",
+            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53]\n",
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
