Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMpN9181+opZaWh64vf+Itu",
+      "authorship_tag": "ABX9TyNzL7QIiWQfaUdX2CxE06YR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8777,7 +8777,7 @@
         "if __name__ == '__main__':\n",
         "    main()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10168,19 +10168,133 @@
         "id": "LQpsIxCK5onk"
       },
       "source": [
-        "#### "
+        "#### 1524번"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "def main():\n",
+        "    for _ in range(int(input())):\n",
+        "        t = input()\n",
+        "        n,m = map(int, input().split())\n",
+        "        N = list(map(int, input().split()))\n",
+        "        M = list(map(int, input().split())) # 세비\n",
+        "        \n",
+        "        N.sort()\n",
+        "        M.sort()\n",
+        "\n",
+        "        N_start, M_start = 0, 0\n",
+        "\n",
+        "        while N_start < n and M_start < m:                \n",
+        "            if N[N_start] < M[M_start]:\n",
+        "                N_start += 1\n",
+        "            else:\n",
+        "                M_start += 1\n",
+        "\n",
+        "        if N_start == n:\n",
+        "            print('B')\n",
+        "        elif M_start == m:\n",
+        "            print('S')\n",
+        "        else:\n",
+        "            print('C')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
         "id": "Qdw-Ikf65onl"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 4504번"
+      ],
+      "metadata": {
+        "id": "0Zh2q1xWVzVM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "    t = int(input())\n",
+        "\n",
+        "    while True:\n",
+        "        x = int(input())\n",
+        "        if not x:\n",
+        "            break\n",
+        "        \n",
+        "        can = False\n",
+        "        if x % t == 0:\n",
+        "            can = True\n",
+        "        \n",
+        "        if can:\n",
+        "            print('{0} is a multiple of {1}.'.format(x,t))\n",
+        "        else:\n",
+        "            print('{0} is NOT a multiple of {1}.'.format(x,t))\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "qxwKtC68VzrA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 10539번"
+      ],
+      "metadata": {
+        "id": "TICrTIpL_P5U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "    n = int(input())\n",
+        "    b = list(map(int, input().split()))\n",
+        "    a = []\n",
+        "    sum = 0\n",
+        "    for i in range(n):\n",
+        "        a.append(b[i]*(i+1) - sum)\n",
+        "        sum += a[i]\n",
+        "    \n",
+        "    print(*a)\n",
+        "    \n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0tyl9l-A_PfT",
+        "outputId": "ee2721ac-061a-4654-bb50-8607a5067274"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "1 2 2 3 4\n",
+            "1 3 2 6 8\n",
+            "[1, 2, 2, 3, 4]\n"
+          ]
+        }
+      ]
     }
   ]
 }
