--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyNzL7QIiWQfaUdX2CxE06YR",
+      "authorship_tag": "ABX9TyN6jXKrXT+F62z69ZRkyxOh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8737,11 +8737,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "deM_c1kF9J4_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "575b4df2-4bdb-4f4b-8aeb-51b614ea0a6b"
+        "id": "deM_c1kF9J4_"
       },
       "source": [
         "import sys\n",
@@ -8778,17 +8774,7 @@
         "    main()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "53\n",
-            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53]\n",
-            "2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -8796,7 +8782,7 @@
         "id": "E_uPvDec9J79"
       },
       "source": [
-        "#### "
+        "####  1450번"
       ]
     },
     {
@@ -8805,27 +8791,31 @@
         "id": "f-mrdWza9J8C"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7Jk6q-Z49J_J"
-      },
-      "source": [
-        "#### "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "esuh9VBc9J_K"
-      },
-      "source": [
-        ""
+        "def main():\n",
+        "    n, c = map(int, input().split())\n",
+        "    s = list(map(int, input().split()))\n",
+        "    s.sort()\n",
+        "\n",
+        "    res = 1\n",
+        "\n",
+        "    start, end = 0, 1\n",
+        "\n",
+        "    while start < end:\n",
+        "\n",
+        "        sum_value = sum(s[start:end])\n",
+        "\n",
+        "        if abs(sum_value) < res[0]:\n",
+        "            if res[0] == 0:\n",
+        "                break\n",
+        "\n",
+        "        if sum_value > 0:\n",
+        "            end -= 1\n",
+        "        else:\n",
+        "            start += 1\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "execution_count": null,
       "outputs": []
@@ -10271,30 +10261,169 @@
         "        sum += a[i]\n",
         "    \n",
         "    print(*a)\n",
-        "    \n",
+        "    print(b)\n",
+        "\n",
         "if __name__ == '__main__':\n",
         "    main()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0tyl9l-A_PfT",
-        "outputId": "ee2721ac-061a-4654-bb50-8607a5067274"
+        "id": "0tyl9l-A_PfT"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5\n",
-            "1 2 2 3 4\n",
-            "1 3 2 6 8\n",
-            "[1, 2, 2, 3, 4]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####   4597번"
+      ],
+      "metadata": {
+        "id": "T_nb-VWA3SjZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "    while True:\n",
+        "        t = input()\n",
+        "\n",
+        "        if t == '#':\n",
+        "            break\n",
+        "        \n",
+        "        cnt = 0\n",
+        "        for i in t:\n",
+        "            if i == '1':\n",
+        "                cnt += 1\n",
+        "\n",
+        "        res = t[:-1]\n",
+        "\n",
+        "        if t[-1] == 'e':\n",
+        "            if cnt % 2 == 0:\n",
+        "                res += '0'\n",
+        "            else:\n",
+        "                res += '1'\n",
+        "        else:\n",
+        "            if cnt % 2 == 0:\n",
+        "                res += '1'\n",
+        "            else:\n",
+        "                res += '0'\n",
+        "        \n",
+        "        print(res)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "PTZHWsKJ3S3W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 1773번"
+      ],
+      "metadata": {
+        "id": "Y04N26dj6gAG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "    n, c = map(int, input().split())\n",
+        "    m = []\n",
+        "    for _ in range(n):\n",
+        "        m.append(int(input()))\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "4mAwuyXK3vjD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "sF6wQ5h86hZQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "v7G7T8hL6hZR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "zuHYlmO16hc1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "qGw8Jo_Q6hc2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "FYTv7wqZ6hgB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "iss3HyEL6hgB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "gdYfXoAM6hi9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ByQiuzsm6hi-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
