Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyN6jXKrXT+F62z69ZRkyxOh",
+      "authorship_tag": "ABX9TyO33OZ6UNWdqQ+oeG3hQVHU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10332,12 +10332,21 @@
     {
       "cell_type": "code",
       "source": [
+        "import sys\n",
+        "input = sys.stdin.readline\n",
         "def main():\n",
         "    n, c = map(int, input().split())\n",
-        "    m = []\n",
+        "    cnt = [False] * (c+1)\n",
         "    for _ in range(n):\n",
-        "        m.append(int(input()))\n",
-        "    "
+        "        i = int(input())\n",
+        "        for j in range(i,c+1,i):\n",
+        "            if not cnt[j]:\n",
+        "                cnt[j] = True\n",
+        "    \n",
+        "    print(sum(cnt))\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()      "
       ],
       "metadata": {
         "id": "4mAwuyXK3vjD"
@@ -10348,7 +10357,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 4402번"
       ],
       "metadata": {
         "id": "sF6wQ5h86hZQ"
@@ -10357,12 +10366,46 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "#input = sys.stdin.readline\n",
+        "def main():\n",
+        "\n",
+        "    dict_list =    {1 : ['B','F','P','V'], \n",
+        "                    2 : ['C','G','J','K','Q','S','X','Z'], \n",
+        "                    3 : ['D','T'], \n",
+        "                    4 : ['L'], \n",
+        "                    5 : ['M','N'], \n",
+        "                    6 : ['R'], \n",
+        "                    0 : ['A','E','I','O','U','H','W','Y']}\n",
+        "\n",
+        "    input_list = []\n",
+        "    for i in sys.stdin:\n",
+        "        input_list.append(i.rstrip('\\n'))\n",
+        "    \n",
+        "    for t in input_list:\n",
+        "        res = ':'\n",
+        "        for i in t:\n",
+        "            for k, v in dict_list.items():\n",
+        "                if i in v:\n",
+        "                    if res[-1] == str(k):\n",
+        "                        continue\n",
+        "                    else:\n",
+        "                        res += str(k)                        \n",
+        "\n",
+        "                    break\n",
+        "\n",
+        "        for i in range(1,len(res)):\n",
+        "            if res[i] != '0':\n",
+        "                print(res[i],end='')\n",
+        "        print()\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()      "
       ],
       "metadata": {
         "id": "v7G7T8hL6hZR"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
