Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyO33OZ6UNWdqQ+oeG3hQVHU",
+      "authorship_tag": "ABX9TyOCbx2zgva35j0LlMdhXb+Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10405,13 +10405,13 @@
       "metadata": {
         "id": "v7G7T8hL6hZR"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1855번"
       ],
       "metadata": {
         "id": "zuHYlmO16hc1"
@@ -10420,13 +10420,46 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import sys\n",
+        "#input = sys.stdin.readline\n",
+        "def main(): \n",
+        "    t = int(input())\n",
+        "\n",
+        "    s = input() + 'x'\n",
+        "    result = []\n",
+        "\n",
+        "    for i in range(int(len(s)//t)):\n",
+        "        if i % 2 == 1:\n",
+        "            result.append(s[i*t:i*t+t][::-1])\n",
+        "        else:\n",
+        "            result.append(s[i*t:i*t+t])\n",
+        "    \n",
+        "    for i in range(t):\n",
+        "        for j in range(len(result)):\n",
+        "            print(result[j][i],end='')            \n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()      "
       ],
       "metadata": {
-        "id": "qGw8Jo_Q6hc2"
+        "id": "qGw8Jo_Q6hc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6c2fdb9-2465-4f37-ef02-1262d8de1d08"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "aeijfbcgklhd\n",
+            "abcdefghijkl"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -10440,7 +10473,24 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "1 2 3\n",
+        "6 5 4\n",
+        "\n",
+        "7 8 9\n",
+        "12 11 10\n",
+        "\n",
+        "13 14 15\n",
+        "18 17 16\n",
+        "\n",
+        "i i+1 i+2\n",
+        "i+5 i+4 i+3\n",
+        "\n",
+        "i i+1 i+2\n",
+        "i+5 i+4 i+3\n",
+        "\n",
+        "i i+1 i+2\n",
+        "i+5 i+4 i+3\n",
+        "\n"
       ],
       "metadata": {
         "id": "iss3HyEL6hgB"
