Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyOCbx2zgva35j0LlMdhXb+Q",
+      "authorship_tag": "ABX9TyMrMx0BzcgB5IOtsYC+Qgi6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8782,7 +8782,7 @@
         "id": "E_uPvDec9J79"
       },
       "source": [
-        "####  1450번"
+        "####  (*****)1450번"
       ]
     },
     {
@@ -8791,29 +8791,42 @@
         "id": "f-mrdWza9J8C"
       },
       "source": [
+        "def bruteforce(st, end, warr, sumarr): \n",
+        "    if st >= len(warr): \n",
+        "        sumarr.append(end) \n",
+        "        return     \n",
+        "    bruteforce(st + 1, end, warr, sumarr)    \n",
+        "    bruteforce(st + 1, end + warr[st], warr, sumarr) \n",
+        " \n",
+        "def binarysearch(start, end, arr, target): \n",
+        "    while start < end: \n",
+        "        mid = (start + end) // 2 \n",
+        "        if arr[mid] <= target: \n",
+        "            start = mid + 1 \n",
+        "        else: \n",
+        "            end = mid \n",
+        "    return end \n",
+        "\n",
         "def main():\n",
         "    n, c = map(int, input().split())\n",
         "    s = list(map(int, input().split()))\n",
-        "    s.sort()\n",
         "\n",
-        "    res = 1\n",
+        "    left = s[:n // 2] \n",
+        "    right = s[n // 2:] \n",
+        "    lsum = [] \n",
+        "    rsum = [] \n",
         "\n",
-        "    start, end = 0, 1\n",
+        "    bruteforce(0, 0, left, lsum) \n",
+        "    bruteforce(0, 0, right, rsum) \n",
+        "    rsum.sort() \n",
         "\n",
-        "    while start < end:\n",
-        "\n",
-        "        sum_value = sum(s[start:end])\n",
-        "\n",
-        "        if abs(sum_value) < res[0]:\n",
-        "            if res[0] == 0:\n",
-        "                break\n",
-        "\n",
-        "        if sum_value > 0:\n",
-        "            end -= 1\n",
-        "        else:\n",
-        "            start += 1\n",
-        "\n",
-        "\n",
+        "    result = 0 \n",
+        "    for i in lsum: \n",
+        "        if c - i >= 0: \n",
+        "            result += binarysearch(0, len(rsum), rsum, c - i) \n",
+        "        \n",
+        "    print(result)\n",
+        "    \n",
         "if __name__ == '__main__':\n",
         "    main()"
       ],
@@ -10448,7 +10461,7 @@
         },
         "outputId": "f6c2fdb9-2465-4f37-ef02-1262d8de1d08"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
