Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -163,7 +163,7 @@
         "CIsbivR4a9HU",
         "InPGru7oa9K7"
       ],
-      "authorship_tag": "ABX9TyMrMx0BzcgB5IOtsYC+Qgi6",
+      "authorship_tag": "ABX9TyO+Xh2HGHD/zIyzh5XHabcA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8839,7 +8839,7 @@
         "id": "eWsnwFm3PyO6"
       },
       "source": [
-        "### 단계 : ===========**"
+        "### 단계 : 동적 계획법과 최단거리 역추적==========="
       ]
     },
     {
@@ -8848,13 +8848,151 @@
         "id": "8JfFjnuZPyO6"
       },
       "source": [
+        "####  12852번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uIzAR78kPyO7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3524f6f6-ba00-4cf0-85dc-6c2671671266"
+      },
+      "source": [
+        "def solve(x):\n",
+        "    global result\n",
+        "\n",
+        "    result[x] = True\n",
+        "\n",
+        "    if x % 3 == 0:\n",
+        "        solve(x//3)\n",
+        "    elif x % 2 == 0:\n",
+        "        solve(x//2)\n",
+        "    \n",
+        "    if x > 1:\n",
+        "        solve()\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "    n = int(input())\n",
+        "\n",
+        "    result = [False] * (n + 1)\n",
+        "    \n",
+        "    solve(n,[])\n",
+        "    print(result)\n",
+        "\n",
+        "    \n",
+        "if __name__ == '__main__':\n",
+        "    main()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "[[2], [3]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ul4mJr0gbaBW"
+      },
+      "source": [
         "#### "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uIzAR78kPyO7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NAynpyVBbaBW",
+        "outputId": "7d8686de-dc3e-4ee1-dd98-f0dd2851f1ca"
+      },
+      "source": [
+        "print(1e6 + 1)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1000001.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jrkS22SSbaEm"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EaT4sZmrbaEm"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oO7fwVrFbaHm"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "twAOzqyBbaHm"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YmNhCb79bUUH"
+      },
+      "source": [
+        "### 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fbBBHDCubUUH"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r9eM5pvvbUUH"
       },
       "source": [
         ""
@@ -10455,29 +10593,15 @@
         "    main()      "
       ],
       "metadata": {
-        "id": "qGw8Jo_Q6hc2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f6c2fdb9-2465-4f37-ef02-1262d8de1d08"
+        "id": "qGw8Jo_Q6hc2"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n",
-            "aeijfbcgklhd\n",
-            "abcdefghijkl"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 2061번"
       ],
       "metadata": {
         "id": "FYTv7wqZ6hgB"
@@ -10486,24 +10610,24 @@
     {
       "cell_type": "code",
       "source": [
-        "1 2 3\n",
-        "6 5 4\n",
+        "import sys\n",
+        "#input = sys.stdin.readline\n",
+        "def main(): \n",
+        "    k, l = map(int, input().split())           \n",
         "\n",
-        "7 8 9\n",
-        "12 11 10\n",
+        "    can = False\n",
+        "    for i in range(2,l):\n",
+        "        if k % i == 0:\n",
+        "            print('BAD',i)\n",
+        "            can = True\n",
+        "            break\n",
+        "    \n",
+        "    if not can:\n",
+        "        print('GOOD')\n",
+        "        \n",
         "\n",
-        "13 14 15\n",
-        "18 17 16\n",
-        "\n",
-        "i i+1 i+2\n",
-        "i+5 i+4 i+3\n",
-        "\n",
-        "i i+1 i+2\n",
-        "i+5 i+4 i+3\n",
-        "\n",
-        "i i+1 i+2\n",
-        "i+5 i+4 i+3\n",
-        "\n"
+        "if __name__ == '__main__':\n",
+        "    main()      "
       ],
       "metadata": {
         "id": "iss3HyEL6hgB"
